--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
     "react-router-dom": "^6.17.0",
+    "recharts": "^2.9.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
