--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "recharts": "^2.9.0",
     "yup": "^1.3.2"
