--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
