--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
+    "paths": {
+      "src/*": ["./src/*"]
+    }
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "baseUrl": ".",
-  "paths": {
-    "@components/*": ["src/components/*"],
-    "@utils/*": ["src/utils/*"]
-  }
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
